apps/staging/radio/liquidsoap-scheduling.patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: liquidsoap
  namespace: radio
spec:
  template:
    spec:
      nodeSelector:
        kubernetes.io/hostname: k8s-worker-01
